# simpler-logging

./: .gitignore  LICENSE  README.md  pyproject.toml
src/simpler_logging/: __init__.py  logger.py
